# openclaw-newsletter

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  state.json
.github/workflows/: generate-newsletter.yml
docs/: archive.html  index.html  rss.xml
docs/assets/: style.css
docs/issues/: 2026-02-06.html  2026-02-07.html  2026-02-08.html  2026-02-09.html  2026-02-10.html  2026-02-11.html  2026-02-12.html  2026-02-13.html  2026-02-14.html  2026-02-15.html  2026-02-16.html  2026-02-17.html  2026-02-18.html  2026-02-19.html  2026-02-20.html  2026-02-21.html  2026-02-22.html  2026-02-23.html  2026-02-24.html  2026-02-25.html  2026-02-26.html  2026-02-27.html  2026-02-28.html  2026-03-01.html  2026-03-02.html  2026-03-03.html  2026-03-04.html  2026-03-05.html  2026-03-06.html  2026-03-07.html  2026-03-08.html  2026-03-09.html  2026-03-10.html  2026-03-11.html  2026-03-12.html  2026-03-13.html  2026-03-14.html
src/: __init__.py  config.py  main.py
src/collectors/: academic_news.py  alternativeto.py  arxiv_papers.py  awesome_skills.py  base.py  blog_feed.py  claw360.py  clawhub_skills.py  clawhunt.py  devto.py  digitalocean.py  discord_feed.py  docker_hub.py  docs_updates.py  events.py  g2_learning.py  github_activity.py  github_releases.py  github_sponsors.py  github_stats.py  hackernews.py  homebrew_stats.py  huggingface.py  learnclaw.py  lobsters.py  (+16 more)
templates/: archive.html  email.html  index.html  newsletter.html  rss.xml
tests/: __init__.py  conftest.py  test_ai_writer.py  test_base_collector.py  test_data_models.py  test_state_manager.py
(+15 files in other folders)
